Move docs to main folder

--- a/doc/trase/buttons.mdx
+++ b/doc/trase/buttons.mdx
@@ -3,7 +3,7 @@ Buttons
 ---
 import { PropsTable, Playground } from 'docz'
 import Button from 'react-components/shared/button/button.component';
-import 'styles/_docz.scss';
+import '../../frontend/styles/_docz.scss';
 
 ## Buttons
 
