--- a/doc/trase/cards.mdx
+++ b/doc/trase/cards.mdx
@@ -3,7 +3,7 @@ Cards
 ---
 import { PropsTable, Playground } from 'docz'
 import Card from 'react-components/shared/card/card.component';
-import 'styles/_docz.scss';
+import '../../frontend/styles/_docz.scss';
 
 ## Cards
 <div className="components-container">
