--- a/doc/trase/tabs.mdx
+++ b/doc/trase/tabs.mdx
@@ -4,7 +4,7 @@ name: Tabs
 import { PropsTable, Playground } from 'docz'
 import { State } from 'react-powerplug';
 import Tabs from 'react-components/shared/tabs/tabs.component';
-import 'styles/_docz.scss';
+import '../../frontend/styles/_docz.scss';
 
 ## Tabs
 
