--- a/doc/trase/inputs.mdx
+++ b/doc/trase/inputs.mdx
@@ -3,7 +3,7 @@ name: Inputs
 ---
 import { PropsTable, Playground } from 'docz'
 import SearchInput from 'react-components/shared/search-input/search-input.component';
-import 'styles/_docz.scss';
+import '../../frontend/styles/_docz.scss';
 import countries from './mock-data/countries-list.json';
 
 ## Search input
