--- a/doc/trase/lists.mdx
+++ b/doc/trase/lists.mdx
@@ -5,7 +5,7 @@ import { PropsTable, Playground } from 'docz'
 import { State } from 'react-powerplug';
 import GridList from 'react-components/shared/grid-list/grid-list.component';
 import GridListItem from 'react-components/shared/grid-list-item/grid-list-item.component';
-import 'styles/_docz.scss';
+import '../../frontend/styles/_docz.scss';
 import countries from './mock-data/countries-list.json';
 import indicators from './mock-data/indicators-list.json';
 
