--- a/doc/trase/texts.mdx
+++ b/doc/trase/texts.mdx
@@ -4,7 +4,7 @@ name: Headings and Texts
 import { PropsTable, Playground } from 'docz'
 import Heading from 'react-components/shared/heading/heading.component';
 import Text from 'react-components/shared/text/text.component';
-import 'styles/_docz.scss';
+import '../../frontend/styles/_docz.scss';
 
 ## Heading
 
