--- a/frontend/docs/components/buttons.mdx
+++ b/frontend/docs/components/buttons.mdx
@@ -31,6 +31,11 @@ import 'styles/_docz.scss';
   <Button variant="circle" icon="icon-download"/>
 </div>
 
+#### Button with variant="circle", color="charcoal" and icon="icon-table"
+<div className="components-container -spaced">
+  <Button variant="circle" color="charcoal" icon="icon-table"/>
+</div>
+
 #### Button with variant="circle" and icon="icon-arrow"
 <div className="components-container -spaced">
   <Button variant="circle" icon="icon-arrow"/>
